# OnnxOCR

./: main.py  pyproject.toml  test_ocr.py
onnxocr/: predict_base.py
