[project]
name = "onnxocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask==3.1.1",
    "imgaug==0.4.0",
    "lmdb==1.6.2",
    "onnxruntime-gpu==1.22.0",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "pyclipper==1.3.0.post6",
    "requests==2.32.4",
    "scikit-image==0.25.2",
    "shapely==2.1.1",
    "tqdm==4.67.1",
]
